gccida/g2/expand_eh_region_end_cleanup
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_eh_region_end_cleanup/src/except.c:1218:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_eh_region_end_cleanup/src/except.c:1250:21: error: use of undeclared identifier 'machine_mode'
v5 = gen_reg_rtx( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4)); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_eh_region_end_cleanup/src/except.c:1256:26: error: use of undeclared identifier 'machine_mode'
exc_ptr = gen_reg_rtx( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4)); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_eh_region_end_cleanup/src/except.c:1260:30: error: invalid suffix 'xmode' on integer constant
v9 = gen_reg_rtx( *(short *)0xmode); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_eh_region_end_cleanup/src/except.c:1265:34: error: invalid suffix 'xmode' on integer constant
filter = gen_reg_rtx( *(short *)0xmode); 
                                 ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_eh_region_end_cleanup/src/obj/except.o] Error 1
